# jacobi_mpi_avx

./: CMakeLists.txt  main.cpp
header/: mpi.h
